reports/colored_noise.err.log
Traceback (most recent call last):
  File "/home/alex/usr/venv/emd-paper/lib64/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/alex/usr/venv/emd-paper/lib64/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/alex/usr/venv/emd-paper/lib64/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/alex/usr/venv/emd-paper/lib64/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib64/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/alex/usr/venv/emd-paper/lib64/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/alex/usr/venv/emd-paper/lib64/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/alex/usr/venv/emd-paper/lib64/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
n_realizations_shown = 10
seedseq = np.random.SeedSequence(6168912654954)
Tlst = [100.]
σlst = [0.33, 1., 9.]
τlst = [1., 5., 25.]
ρlst = [1, 5, 30, 200]
Nlst = [100]
exp_conds = list(itertools.product(Tlst, σlst, τlst, ρlst, Nlst))S
# exp_conds = [
#     # T     σ    τ     ρ    N
#     (100. , 1. , 1. , 30 , 100),
#     (100.  , 1. , 1. , 5  , 100),
#     (100. , 1. , 1. , 300, 100),
#     (100. , 0.2, 1. , 30 , 100),
#     (100. , 1.,  5. , 30 , 100),
#     (100. , 1.,  5. , 5  , 100),
#     (100. , 1.,  25., 30 , 100),
#     (100. , 1.,  25., 5  , 100),
# ]
------------------

[0;36m  Cell [0;32mIn[7], line 8[0;36m[0m
[0;31m    exp_conds = list(itertools.product(Tlst, σlst, τlst, ρlst, Nlst))S[0m
[0m                                                                     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2941889311.py, line 8)

